styles/Landing.module.css
.container {
    height: 100vh;
    display: grid;
    grid-template-areas: 
        "title"
        "social";
    text-align: center;
}

.title {
    font-size: 550%;
    text-shadow: 12px 12px 15px #fff;

}

.firstName {
    color: var(--primary-color);
    text-shadow: 12px 12px 15px var(--primary-color);
    animation: flashLights 3s ease;
    animation-iteration-count: infinite;
}

.lastName {
    color: var(--secondary-color);
    text-shadow: 12px 12px 15px var(--secondary-color);
}


.openingDiv {
    margin-top: 5rem;
    padding: 6rem 6rem 0 6rem;
}

.text {
    font-size: 150%;
    text-align: center;
    padding: 0 25rem 0 25rem;
    animation: fadeIn 3s ease;
    margin: 4rem 0 4rem 0;
}

.socialMediaWrapper {
    display: flex;
    justify-content: center;    
    grid-area: social;
    padding: 0;
}

.logo {
    width: 30pt;
    height: 30pt;
    margin: 0 2rem 0 2rem;
    display: inline;
    animation: fadeIn 3s ease;
    filter: invert(99%) sepia(0%) saturate(0%) hue-rotate(73deg) brightness(103%) contrast(100%);
    transition: 25ms ease;
}

.logo:hover {
    filter: invert(11%) sepia(69%) saturate(7003%) hue-rotate(328deg) brightness(112%) contrast(95%);
}

.pfpContainer {
    text-align: center;
}

.pfp {
    border-radius: 20%;
    width: 280px;
    height: 280px;
    margin-top: 5rem;
}

@keyframes fadeIn {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

@keyframes flashLights {
    0% {
        text-shadow: none;
    }

    6% {
        text-shadow: 12px 12px 15px var(--primary-color);
    }
    8% {
        text-shadow: none;
    }
    10% {
        text-shadow: 12px 12px 15px var(--primary-color);
    }
   
    100% {
        text-shadow: 12px 12px 15px var(--primary-color);
    }

}

@media screen and (max-width: 1025px) { 

    .openingDiv {
        margin-top: 6rem;
        padding: 0;
    }

    .container {
        height: 100%;
    }

    .socialMediaWrapper {
        margin-top: 5rem;
    }

    .title {
        font-size: 270%;
        margin-bottom: 3rem;
        padding: 0 3rem 0 3rem;
    }    

    .text {
        font-size: 130%;
        padding: 0 3rem 0 3rem;
    }

    .pfp {
        height: 170px;
        width: 170px;
        margin-top: 5rem;
    }

    .logo {
        width: 25pt;
        height: 25pt;
    }
}

